--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
   		
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="apple-touch-icon" href="{{ "/apple-touch-icon.png" | prepend: site.baseurl }}">
+        <link rel="apple-touch-icon" href="{{ "apple-touch-icon.png" | prepend: site.baseurl }}">
         
      
         <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
